--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<div class="square"></div>	
 	</div>
 
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
 	<script type="text/javascript" src="colorGame.js"></script>
 </body>
 </html>
